--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@plugin "@tailwindcss/forms";
 
 * {
   scrollbar-color: transparent transparent;
@@ -9,5 +8,13 @@
   display: none;
 }
 .card {
-  @apply relative border rounded-lg p-4 shadow-sm shadow-indigo-100;
+  @apply relative rounded-lg p-4 border border-gray-200 shadow-2xs shadow-indigo-100;
+
+  &.card-primary {
+    @apply border-indigo-100 shadow-indigo-300;
+  }
+}
+
+.fab {
+  @apply rounded-full flex items-center justify-center bg-gray-100/50 backdrop-blur-md inset-shadow-2xs;
 }
